--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=5723e0914456adccac001440b8a72160
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://memoldura.com.br
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
