--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,10 @@
             "php artisan ide-helper:generate",
             "php artisan ide-helper:meta",
             "php artisan optimize"
+        ],
+        "post-atualiza-base": [
+            "php artisan migrate",
+            "php artisan db:seed"
         ]
     },
     "config": {
