--- a/composer.json
+++ b/composer.json
@@ -45,9 +45,7 @@
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan ide-helper:generate",
             "php artisan ide-helper:meta",
-            "php artisan optimize"
-        ],
-        "post-atualiza-base": [
+            "php artisan optimize",
             "php artisan migrate",
             "php artisan db:seed"
         ]
