--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,9 @@
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan ide-helper:generate",
             "php artisan ide-helper:meta",
-            "php artisan optimize"
+            "php artisan optimize",
+            "php artisan migrate",
+            "php artisan db:seed"
         ]
     },
     "config": {
